--- a/configuration.yaml
+++ b/configuration.yaml
@@ -18,6 +18,9 @@ history:
 logbook:
 sun:
 
+hacs:
+  token: !secret github_access_token
+
 binary_sensor:
 - platform: template
   sensors: !include_dir_merge_named binary_sensors
