--- a/configuration.yaml
+++ b/configuration.yaml
@@ -7,8 +7,8 @@ homeassistant:
   time_zone: America/Los_Angeles
 
 frontend:
+  themes: !include_dir_merge_named themes
 lovelace:
-  mode: yaml
 config:
 system_health:
 http:
@@ -20,10 +20,17 @@ sun:
 
 hacs:
   token: !secret github_access_token
+  theme: true
 
 binary_sensor:
 - platform: template
   sensors: !include_dir_merge_named binary_sensors
+
+# August
+august:
+  login_method: phone
+  username: !secret august_username
+  password: !secret august_password
 
 sensor:
 
@@ -52,5 +59,5 @@ sensor:
 
 group: !include groups.yaml
 automation: !include automations.yaml
-script: !include scripts.yaml
+script: !include_dir_merge_named scripts
 scene: !include scenes.yaml
