Add thermostat to UI

--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -1,5 +1,5 @@
 title: !secret home_name
 views:
-  - !include ui/security.yaml
+  - !include ui/home.yaml
   - !include ui/switches.yaml
   - !include ui/status.yaml
