--- a/esphome/thermostat.yaml
+++ b/esphome/thermostat.yaml
@@ -6,18 +6,30 @@ esphome:
 wifi:
   ssid: !secret wifi_ssid
   password: !secret wifi_password
-
-  # Enable fallback hotspot (captive portal) in case wifi connection fails
-  ap:
-    ssid: "Thermostat Fallback Hotspot"
-    password: "sIgXlTEAIYYy"
+  use_address: 10.0.0.61
 
 captive_portal:
-
-# Enable logging
 logger:
-
-# Enable Home Assistant API
 api:
-
 ota:
+
+switch:
+  - platform: gpio
+    id: heater
+    pin: D0
+
+sensor:
+  - platform: homeassistant
+    id: temperature
+    entity_id: sensor.master_bedroom_temperature
+
+climate:
+  - platform: bang_bang
+    name: "Thermostat"
+    sensor: temperature
+    default_target_temperature_low: 64 °F
+    default_target_temperature_high: 72 °F
+    heat_action:
+      - switch.turn_on: heater
+    idle_action:
+      - switch.turn_off: heater
