--- a/configuration.yaml
+++ b/configuration.yaml
@@ -55,6 +55,6 @@ sensor:
       - type: processor_use
 
 group: !include groups.yaml
-automation: !include automations.yaml
+automation: !include_dir_merge_list automations
 script: !include_dir_merge_named scripts
 scene: !include scenes.yaml
