--- a/configuration.yaml
+++ b/configuration.yaml
@@ -28,10 +28,11 @@ binary_sensor:
 - platform: template
   sensors: !include_dir_merge_named binary_sensors
 
-august: !include platforms/august.yaml
-dyson: !include platforms/dyson.yaml
-ecobee: !include platforms/ecobee.yaml
-homekit: !include platforms/homekit.yaml
+august: !include integrations/august.yaml
+dyson: !include integrations/dyson.yaml
+ecobee: !include integrations/ecobee.yaml
+homekit: !include integrations/homekit.yaml
+input_boolean: !include integrations/input_boolean.yaml
 
 sensor:
   - platform: darksky
