--- a/automations/autolock.yaml
+++ b/automations/autolock.yaml
@@ -42,4 +42,4 @@
     state: 'off'
   action:
     - service: lock.lock
-      entity_id: lock.front_door_deadbolt
+      entity_id: lock.front_door
