--- a/configuration.yaml
+++ b/configuration.yaml
@@ -24,6 +24,9 @@ sun:
 recorder:
   db_url: !secret mysql_url
 
+hacs:
+  token: !secret github_access_token
+
 binary_sensor:
 - platform: template
   sensors: !include_dir_merge_named binary_sensors
