--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -1,4 +1,13 @@
 title: !secret home_name
+
+resources:
+  - url: /community_plugin/lovelace-card-tools/card-tools.js
+    type: module
+  - url: /community_plugin/search-card/search-card.js
+    type: module
+  - url: /community_plugin/simple-weather-card/simple-weather-card-bundle.js
+    type: module
+
 views:
   - !include ui/home.yaml
   - !include ui/switches.yaml
