--- a/scenes.yaml
+++ b/scenes.yaml
@@ -3,11 +3,21 @@
     group.outdoor_lights:
       state: on
       brightness: 76
-    light.living_room_arc_lamp:
-      state: on
-      brightness: 200
 
 - name: Sunrise
   entities:
     group.outdoor_lights: off
+
+- name: Sunset Vacation
+  entities:
+    light.living_room_arc_lamp:
+      state: on
+      brightness: 76
+    light.ellens_lamp:
+      state: on
+      brightness: 76
+
+- name: Sunrise Vacation
+  entities:
     light.living_room_arc_lamp: off
+    light.ellens_lamp: off
