--- a/integrations/homekit.yaml
+++ b/integrations/homekit.yaml
@@ -1,5 +1,7 @@
 filter:
   include_entities:
+    - climate.hallway
+    - cover.garage_door
     - fan.master_bedroom
     - light.bonus_room_overhead_1
     - light.bonus_room_overhead_2
