--- a/customize.yaml
+++ b/customize.yaml
@@ -19,6 +19,36 @@ light.sofa_lightstrip:
 light.chair_lightstrip:
   icon: mdi:led-strip-variant
 
+binary_sensor.bonus_room_left_window:
+  device_class: window
+binary_sensor.bonus_room_right_window:
+  device_class: window
+binary_sensor.bonus_room_small_window:
+  device_class: window
+binary_sensor.dinning_room_window:
+  device_class: window
+binary_sensor.guest_bedroom_left_window:
+  device_class: window
+binary_sensor.guest_bedroom_right_window:
+  device_class: window
+binary_sensor.kitchen_window:
+  device_class: window
+binary_sensor.laundry_window:
+  device_class: window
+binary_sensor.living_room_left_window:
+  device_class: window
+binary_sensor.living_room_right_window:
+  device_class: window
+binary_sensor.master_bathroom_window:
+  device_class: window
+binary_sensor.master_bedroom_window:
+  device_class: window
+binary_sensor.office_window:
+  device_class: window
+
+binary_sensor.back_door_open:
+  device_class: door
+
 group.bonus_room_overhead:
   icon: mdi:ceiling-light
 group.dinning_room_overhead:
