--- a/ui/status.yaml
+++ b/ui/status.yaml
@@ -2,6 +2,31 @@ title: Status
 path: status
 cards:
   - type: entities
+    title: Doors
+    show_header_toggle: false
+    entities:
+      - binary_sensor.front_door_open
+      - binary_sensor.back_door_open
+
+  - type: entities
+    title: Windows
+    show_header_toggle: false
+    entities:
+      - binary_sensor.bonus_room_left_window
+      - binary_sensor.bonus_room_right_window
+      - binary_sensor.bonus_room_small_window
+      - binary_sensor.dinning_room_window
+      - binary_sensor.guest_bedroom_left_window
+      - binary_sensor.guest_bedroom_right_window
+      - binary_sensor.kitchen_window
+      - binary_sensor.laundry_window
+      - binary_sensor.living_room_left_window
+      - binary_sensor.living_room_right_window
+      - binary_sensor.master_bathroom_window
+      - binary_sensor.master_bedroom_window
+      - binary_sensor.office_window
+
+  - type: entities
     title: Batteries
     show_header_toggle: false
     entities:
