--- a/groups.yaml
+++ b/groups.yaml
@@ -100,13 +100,13 @@ bonus_room_overhead:
   entities:
     - light.bonus_room_overhead_1
     - light.bonus_room_overhead_2
+    - light.bonus_room_nook
 
 dinning_room_overhead:
   entities:
     - light.dinning_room_overhead_1
     - light.dinning_room_overhead_2
     - light.dinning_room_overhead_3
-    - light.dinning_room_overhead_4
 
 entryway_overhead:
   entities:
