--- a/integrations/homekit.yaml
+++ b/integrations/homekit.yaml
@@ -5,11 +5,11 @@ filter:
     - fan.master_bedroom
     - light.bonus_room_overhead_1
     - light.bonus_room_overhead_2
+    - light.bonus_room_nook
     - light.chair_lightstrip
     - light.dinning_room_overhead_1
     - light.dinning_room_overhead_2
     - light.dinning_room_overhead_3
-    - light.dinning_room_overhead_4
     - light.ellens_lamp
     - light.entryway_overhead_1
     - light.entryway_overhead_2
