--- a/configuration.yaml
+++ b/configuration.yaml
@@ -27,11 +27,30 @@ recorder:
 hacs:
   token: !secret github_access_token
 
-august: !include integrations/august.yaml
+august:
+  login_method: phone
+  username: !secret august_username
+  password: !secret august_password
+
 automation: !include_dir_merge_list automations
+
 cover: !include integrations/cover.yaml
-dyson: !include integrations/dyson.yaml
-ecobee: !include integrations/ecobee.yaml
+
+dyson:
+  username: !secret dyson_username
+  password: !secret dyson_password
+  language: GB
+  devices:
+    - device_id: !secret dyson_fan_id
+      device_ip: 10.0.0.60
+
+ecobee:
+  api_key: !secret ecobee_api_key
+
+weather:
+  - platform: darksky
+    api_key: !secret dark_sky_api_key
+
 group: !include groups.yaml
 homekit: !include integrations/homekit.yaml
 input_boolean: !include integrations/input_boolean.yaml
@@ -39,4 +58,3 @@ scene: !include scenes.yaml
 script: !include_dir_merge_named scripts
 sensor: !include integrations/sensor.yaml
 timer: !include integrations/timer.yaml
-weather: !include integrations/weather.yaml
